[package]
name = "reentrance"
version = "0.1.0"
authors = ["Mintu Gogoi <mintugogoi567@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "6.0.0-beta.1", default-features = false }

[dev-dependencies]
ink_e2e = { version = "6.0.0-beta.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
