[package]
name = "traits"
version = "0.1.0"
authors = ["Mintu Gogoi <mintugogoi567@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "6.0.0-beta.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3.7.4", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"], optional = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
