[package]
name = "fallback_factory"
version = "0.1.0"
edition = "2021"
authors = ["Mintu Gogoi <mintugogoi567@gmail.com>"]
publish = false

[dependencies]
ink = { version = "6.0.0-beta.1", default-features = false }
traits = { path = "../../traits", default-features = false, features = ["ink-as-dependency"] }
fallback = { path = "..", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = { version = "6.0.0-beta.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "traits/std",
    "fallback/std",
]
ink-as-dependency = []
e2e-tests = []
